<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/menu_search"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_pass_it_on"
        android:icon="@drawable/ic_share"
        android:title="@string/menu_pass_it_on"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_translation"
        android:title="@string/menu_translation"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_accessibility"
        android:title="@string/menu_accessibility"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_privacy"
        android:title="@string/menu_privacy"
        app:showAsAction="never" />
</menu>
